--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -3,9 +3,29 @@
 }
 
 .card img {
-  width: 200px;
-  height: 200px;
+  width: 50%;
   display: block;
   border: 2px solid white;
   border-radius: 6px;
+}
+
+.card .front {
+  transform: rotateY(90deg);
+  position: absolute;
+  transition: all ease-in 0.2s;
+}
+
+.card .back {
+  transition: all ease-in 0.2s;
+  transition-delay: 0.2s;
+}
+
+.turned .front {
+  transform: rotateY(0deg);
+  transition-delay: 0.2s;
+}
+
+.turned .back {
+  transform: rotateY(90deg);
+  transition-delay: 0s;
 }
