--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,11 @@
 /* Import fonts */
 @import url('https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&family=Open+Sans:wght@300;400&display=swap');
 
-/* Reset */
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-/* Global styles  */
-#root {
-  min-height: 100vh;
-}
-
-.App {
-  min-height: 100vh;
-  background-color: blueviolet;
-}
-
 body {
   font-family: 'Open Sans', sans-serif;
-  line-height: 1.6;
-  min-height: 100vh;
-  color: #fff;
+  margin: 0;
+  font-size: 1.5rem;
+  text-align: center;
+  background-color: black;
+  color: blueviolet;
 }
