--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -3,9 +3,9 @@
 }
 
 .card img {
-  width: 50%;
+  width: 100%;
   display: block;
-  border: 2px solid white;
+  border: 2px solid black;
   border-radius: 6px;
 }
 
